# chat-cli

./: .gitignore  2xrtx4060.md  AGENTS.md  README.md  analytics.json  analytics_report_20251124_210821.json  analytics_report_20260325_235453.json  analytics_report_20260403_170348.json  chat-cli.code-workspace  chat_history.json  chat_history.txt  config.json  main.py  plugin_config.json  pyproject.toml  r2r.md  read.txt  requirements.txt  test.txt  test01.txt  test_history.json
analytics/: __init__.py  manager.py  views.py
commands/: chat.py  list_models.py  save_history.py
docs/: AGENTS.md  ARCHITECTURE.md  CONTEXT_OPTIMIZATION_ANALYSIS.md  FINETUNING_8GB.md  FULL_README.md
histories/: 20251124_205951.json  20251124_211437.json  20251225_190527_6b03f1.json
lib/: __init__.py  agent_orchestrator.py  agent_utils.py  command_executor.py  config.py  history.py  input_handler.py  message_builder.py  ollama_wrapper.py  parse_utils.py  plugin_executor.py  plugin_registry.py  plugins.py  session_manager.py  shell_output.py  system_prompt_manager.py
plugins/: __init__.py  distill_plugin.py  example_plugin.py  file_plugin.py  persona_selector.py  registry.py  wiki_plugin.py
repl/: loop.py
services/: models_service.py  server_profiles.py  settings_service.py
tests/: test_agent_utils.py  test_dual_history.py  test_faz21_user_path.py  test_faz2_command_executor.py  test_faz3_orchestrator.py  test_faz4_system_prompt.py  test_faz5_integration.py  test_faz6_plugin_executor.py  test_history_processing.py  test_model_profiles.py  test_parse_utils.py  test_smart_shell.py  (+8 more)
(+7 files in other folders)
