[project]
name = "chat-cli"
version = "0.1.0"
description = "Terminal REPL interface for Ollama with plugin support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.6.1",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "markdown>=3.4.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "structlog>=24.0.0",
    "tiktoken>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", ".chat"]
